# dataflow-rs

./: ForDora.md  README.md
ch1/: Cargo.toml  example.yaml
ch1/src/: descriptor.rs  main.rs
ch2/: Cargo.toml  example-graph.html  example.yaml
ch2/src/: descriptor.rs  main.rs
ch2/src/visualize/: mermaid.rs  mod.rs
ch3/: Cargo.toml  demo.yaml  example-graph.html  example.yaml
ch3/src/: cli.rs  descriptor.rs  event.rs  lib.rs  main.rs
ch3/src/communication/: mod.rs  pub_sub.rs
ch3/src/descriptor/: descriptor.rs  mermaid.rs  mod.rs  validate.rs  visualize.rs
ch3/src/launch/: build.rs  mod.rs  node.rs
ch3/src/runtime/: mod.rs  node.rs  timer.rs
ch3/src/runtime/actuator/: exe_target.rs  mod.rs  shared_library.rs
ch3/src/visualize/: mermaid.rs
ch4/: Cargo.toml
ch4/dataflow/: Cargo.toml
ch4/dataflow/src/: cli.rs  lib.rs  main.rs
ch4/dataflow/src/communication/: pub_sub.rs
ch4/dataflow/src/descriptor/: descriptor.rs  validate.rs  visualize.rs
ch4/dataflow/src/runtime/actuator/: python_module.rs  shell.rs  wasm_module.rs
ch4/sdk/cpp/: Cargo.toml
