[package]
name = "ch2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde-with-expand-env = "1.1.0"
serde_yaml = "0.8.23"
