[package]
name = "dataflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde-with-expand-env = "1.1.0"
serde_yaml = "0.8.23"
webbrowser = "0.8.10"
which = "4.4.0"
flume = "0.10"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
uuid = "1.4.1"
ctrlc = "3.4.0"
zenoh-config = "0.7.2-rc"
zenoh = "0.7.2-rc"
regex = "1.9.3"


[[bin]]
name="ctl"
path="src/main.rs"
